test(e2e): implement MCP workflow E2E suite with JSON-RPC client
Add end-to-end tests that drive the full installer workflow via JSON-RPC
2.0 tool calls over STDIO, exercising all 13 MCP tools across
configuration, integration, deployment, and validation phases.

New files:
- test/e2e/mcpclient.go: raw JSON-RPC 2.0 client over STDIO with
  ToolResult helper, request/notification support, and subprocess
  lifecycle management
- test/e2e/mcpclient_test.go: unit tests for ToolResult.Text()
- test/e2e/mcp/mcp_suite_test.go: Ginkgo suite with MCP server
  subprocess lifecycle and 13-tool handshake verification
- test/e2e/mcp/workflow_test.go: full workflow test covering config
  mutations, integrations, deploy, and Helm release validation

Modified files:
- test/e2e/runner.go: add StartMCPServer() and extract newCmd() helper
- test/e2e/utils.go: export NewHelmConfig, add MCPTestImage helper
- test/e2e/e2e.go: move MCPTestImage to utils.go
- test/config.yaml: add properties to Product B for merge testing
- internal/installer/job.go: fix GetState() to handle ErrJobNotFound
  sentinel, returning (NotFound, nil) instead of InstallerErrorPhase
- Makefile: add test-e2e-mcp target
- .github/workflows/e2e.yaml: add e2e-mcp job with image build step

--- a/.github/actions/kind/action.yaml
+++ b/.github/actions/kind/action.yaml
@@ -5,9 +5,12 @@ description: 'Create KinD cluster for E2E tests'
 runs:
   using: composite
   steps:
-    - name: Create KinD cluster
+    - name: Create KinD cluster with local registry
       uses: helm/kind-action@v1
       with:
         cluster_name: helmet-test
         config: test/kind-cluster.yaml
+        registry: true
+        registry_name: kind-registry
+        registry_port: 5000
         wait: 60s
