--- a/test/kind-cluster.yaml
+++ b/test/kind-cluster.yaml
@@ -1,10 +1,12 @@
-# KinD cluster configuration for helmet testing
+# KinD cluster configuration for helmet testing.
+# Registry mirroring is handled by helm/kind-action (CI) or
+# "docker network connect" in "make kind-up" (local dev).
 kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
 name: helmet-test
 containerdConfigPatches:
   - |-
-    [plugins."io.containerd.grpc.v1.cri".registry]
+    [plugins."io.containerd.grpc.v1.cri".registry.mirrors."localhost:5000"]
       endpoint = ["http://kind-registry:5000"]
 nodes:
   - role: control-plane
